Adicionar tratamento de professor e aluno
